修改问题的接口待改进
