# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/category-create": {
+        "/admin/category-create": {
             "post": {
                 "tags": [
                     "管理员私有方法"
@@ -42,7 +42,7 @@
                 }
             }
         },
-        "/category-delete": {
+        "/admin/category-delete": {
             "post": {
                 "tags": [
                     "管理员私有方法"
@@ -87,7 +87,7 @@
                 }
             }
         },
-        "/category-list": {
+        "/admin/category-list": {
             "get": {
                 "tags": [
                     "管理员私有方法"
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/category-update": {
+        "/admin/category-update": {
             "put": {
                 "tags": [
                     "管理员私有方法"
@@ -174,39 +174,7 @@
                 }
             }
         },
-        "/login": {
-            "post": {
-                "tags": [
-                    "公共方法"
-                ],
-                "summary": "用户登录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "userName",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "password",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"code\":\"200\",\"data\":\"\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/problem-create": {
+        "/admin/problem-create": {
             "post": {
                 "tags": [
                     "管理员私有方法"
@@ -270,7 +238,7 @@
                 }
             }
         },
-        "/problem-delete": {
+        "/admin/problem-delete": {
             "post": {
                 "tags": [
                     "管理员私有方法"
@@ -288,6 +256,106 @@
                         "type": "string",
                         "description": "问题的唯一标识",
                         "name": "identity",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/problem-update": {
+            "put": {
+                "tags": [
+                    "管理员私有方法"
+                ],
+                "summary": "问题更新",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authorization",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "问题的唯一标识",
+                        "name": "identity",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "问题标题",
+                        "name": "title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "问题内容",
+                        "name": "content",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "最大运行内存",
+                        "name": "max_mem",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "最大运行时间",
+                        "name": "max_runtime",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "description": "category_ids",
+                        "name": "category_ids",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "description": "test_cases",
+                        "name": "test_cases",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "公共方法"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userName",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
                         "in": "formData",
                         "required": true
                     }
@@ -356,74 +424,6 @@
                         "description": "分类的唯一标识",
                         "name": "category_identity",
                         "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"code\":\"200\",\"data\":\"\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/problem-update": {
-            "put": {
-                "tags": [
-                    "管理员私有方法"
-                ],
-                "summary": "问题更新",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "authorization",
-                        "name": "authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "问题的唯一标识",
-                        "name": "identity",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "问题标题",
-                        "name": "title",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "问题内容",
-                        "name": "content",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "最大运行内存",
-                        "name": "max_mem",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "最大运行时间",
-                        "name": "max_runtime",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "array",
-                        "description": "category_ids",
-                        "name": "category_ids",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "array",
-                        "description": "test_cases",
-                        "name": "test_cases",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
